--- a/feed/index.html
+++ b/feed/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../dist/css/index.css">
     <link rel="stylesheet" href="../dist/css/feed.css">
     <link rel="stylesheet" href="../dist/css/posts.css">
@@ -23,7 +28,8 @@
                 <div class="d-grid gap-2 buttons-container">
                     <a href="../feed/"><button class="btn active"><i class="fa-solid fa-house"></i> Home</button></a>
                     <a href="../profile/"><button class="btn"><i class="fa-solid fa-user"></i> Profile</button></a>
-                    <a href="../"><button class="btn"><i class="fa-solid fa-right-from-bracket"></i> Log out</button></a>
+                    <a href="../"><button class="btn"><i class="fa-solid fa-right-from-bracket"></i> Log
+                            out</button></a>
                 </div>
             </div>
             <div class="col-md-6 order-md-2 order-2 h-100 middle-column">
