--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/css/index.css">
     <title>Framework</title>
 </head>
@@ -18,12 +23,13 @@
                         <h1 class="card-title">Framework</h1>
                         <form action="profile/">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="Username" required>
+                                <input type="text" class="form-control" id="floatingInput" placeholder="Username"
+                                    required>
                                 <label for="floatingInput">Username</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPassword"
-                                    placeholder="Password" pattern=".{8,}" required title="Password must be at least 8 characters">
+                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+                                    pattern=".{8,}" required title="Password must be at least 8 characters">
                                 <label for="floatingPassword">Password</label>
                             </div>
                             <div class="d-grid">
