--- a/profile/index.html
+++ b/profile/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../dist/css/index.css">
   <link rel="stylesheet" href="../dist/css/profile.css">
   <link rel="stylesheet" href="../dist/css/posts.css">
@@ -52,7 +57,7 @@
         </div>
         <div class="follow-button mt-3">
           <button class="btn btn-primary"><i class="fa-solid fa-user-plus"></i> Follow</button>
-      </div>
+        </div>
         <div class="user-info mt-4">
           <h2>@lucas</h2>
           <h3>Posts:</h3>
@@ -135,7 +140,8 @@
   </div>
 
   <div class="d-md-none position-absolute top-0 end-0 mt-3 logout-mobile">
-    <a href="../"><button class="btn btn-outline-primary" title="Log out"><i class="fa-solid fa-right-from-bracket"></i></button></a>
+    <a href="../"><button class="btn btn-outline-primary" title="Log out"><i
+          class="fa-solid fa-right-from-bracket"></i></button></a>
   </div>
 
   <div class="bottom-bar d-md-none">
