--- a/feed/index.html
+++ b/feed/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../dist/css/posts.css">
     <link rel="stylesheet" href="../dist/css/layout.css">
     <script src="https://kit.fontawesome.com/8404d11a1b.js" crossorigin="anonymous"></script>
-    <title>Feed</title>
+    <title>Feed | Framework</title>
 </head>
 
 <body>
