Changes based of CA feedback

--- a/feed/index.html
+++ b/feed/index.html
@@ -202,11 +202,23 @@
         </div>
     </div>
 
-    <div class="bottom-bar d-md-none">
-        <a href="../feed/" class="btn active"><i class="fa-solid fa-house"></i></a>
-        <a href="../profile/" class="btn"><i class="fa-solid fa-user"></i></a>
-        <a href="#" class="btn"><i class="fa-solid fa-search"></i></a>
-    </div>
+    <nav class="navbar fixed-bottom navbar-expand bg-body-tertiary d-md-none">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="../feed/" class="nav-link active"><i class="fa-solid fa-house"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="../profile/" class="nav-link"><i class="fa-solid fa-user"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link"><i class="fa-solid fa-search"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
