--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div class="col-lg-4">
                 <div class="card">
                     <div class="card-body">
-                        <h1 class="card-title">Framework</h1>
+                        <h1 class="card-title md">Framework</h1>
                         <form action="profile/">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="Username"
+                                <input type="email" class="form-control" id="floatingInput" placeholder="Email"
                                     required>
-                                <label for="floatingInput">Username</label>
+                                <label for="floatingInput">Email</label>
                             </div>
                             <div class="form-floating">
                                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
